// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography snapshots should render empty 1`] = `<DocumentFragment />`;

exports[`Typography snapshots should render with passed inner html 1`] = `
<DocumentFragment>
  <p
    class="Typography Typography--neutral-1 Typography--regular Typography--normal Typography--p"
    data-test-text=""
    style="text-align: inherit;"
  />
  <div>
    innerHtml
  </div>
  <p />
</DocumentFragment>
`;

exports[`Typography snapshots should render with some text 1`] = `
<DocumentFragment>
  <p
    class="Typography Typography--neutral-1 Typography--regular Typography--normal Typography--p"
    data-test-text=""
    style="text-align: inherit;"
  >
    Text
  </p>
</DocumentFragment>
`;
